@@ -1,4 +1,4 @@
-ThisBuild / scalaVersion := "3.3.6"
+ThisBuild / scalaVersion := "2.12.21"
 
 lazy val root = (project in file("."))
   .settings(
@@ -6,6 +6,13 @@ lazy val root = (project in file("."))
     version := "0.1.0-SNAPSHOT",
 
     libraryDependencies ++= Seq(
-      "org.scalatest" %% "scalatest" % "3.2.19" % Test
+      "org.scalatest" %% "scalatest" % "3.2.19" % Test,
+      "org.apache.spark" %% "spark-sql" % "3.5.7"
+    ),
+
+    fork := true,
+
+    javaOptions ++= Seq(
+      "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
     )
   )
